--- a/springSite/src/main/webapp/WEB-INF/web.xml
+++ b/springSite/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,16 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	
+	<!-- ================ 메서드 처리 ================ -->
+	<filter>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>hiddenHttpMethodFilter</filter-name>
+		<url-pattern>/</url-pattern>
+	</filter-mapping>
+	
 	<!-- 에러 발생 시 보여주고자 하는 파일 설정(게시판이 다 작성되고 난 후 주석 해제한다.) --> 
 	<error-page>
 		<error-code>403</error-code>
